tests/suite/snapshots/suite__check__tests__check__bad-early-bind.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-early-bind.xi:2:12]
   │
 2 │   a: int = a
   ·            ┬  
   ·            ╰── Unbound variable a
───╯

